fix z-index (#725)

--- a/wordpress/wp-content/themes/cds-default/style.css
+++ b/wordpress/wp-content/themes/cds-default/style.css
@@ -195,7 +195,7 @@ button.navbar-toggler[aria-expanded='true']::after {
         opacity: 0;
         position: absolute;
         display: none;
-        z-index: 1;
+        z-index: 2;
     }
 
     .nav--primary li .sub-menu li:hover {
